crates/phoenix-codegen/src/snapshots/phoenix_codegen__openapi__tests__openapi_string_length_constraints.snap
---
source: crates/phoenix-codegen/src/openapi.rs
expression: spec
---
{
  "components": {
    "schemas": {
      "Profile": {
        "properties": {
          "bio": {
            "type": "string"
          },
          "username": {
            "maxLength": 50,
            "minLength": 3,
            "type": "string"
          }
        },
        "required": [
          "username",
          "bio"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "API",
    "version": "1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {},
  "servers": [
    {
      "url": "/"
    }
  ]
}
