crates/phoenix-codegen/src/snapshots/phoenix_codegen__openapi__tests__openapi_struct_doc_comment.snap
---
source: crates/phoenix-codegen/src/openapi.rs
expression: spec
---
{
  "components": {
    "schemas": {
      "User": {
        "description": "A registered user account",
        "properties": {
          "id": {
            "type": "integer"
          },
          "name": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "name"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "API",
    "version": "1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {},
  "servers": [
    {
      "url": "/"
    }
  ]
}
